# rustier-smite-bot

./: .gitignore  Cargo.toml
resources/: builds.json  cards.json  gods.json
src/: main.rs  scraper.rs  transformer.rs
