[package]
name = "rustier_smite_bot"
version = "0.1.0"
authors = ["Jackson Ludwig <jacksonludwig0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smite_api_library = { path = "../smite_api_libary" }
reqwest = "0.10.7"
serde_json = "1.0.57"
