[package]
name = "rustier_smite_bot"
version = "0.1.0"
authors = ["Jackson Ludwig <jacksonludwig0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smite_api_library = { path = "../smite_api_library" }
serde_json = "1.0.57"
serenity = "0.8.6"
soup = "0.5.0"
tokio = { version = "0.2", features = ["full"] }
fantoccini = "0.14.0"
